--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "fs19osa4bloglist",
   "version": "0.1.0",
   "description": "",
-  "main": "node index.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "fs19osa4backend"
+    "url": "fs19osa4bloglist"
   },
   "author": "Jussi Alanen",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.10"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
