--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fs19osa4bloglist",
   "version": "0.1.0",
-  "description": "",
+  "description": "bloglist",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
@@ -15,6 +15,7 @@
   "author": "Jussi Alanen",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
